--- a/ThingyApp/Db/nodes.template
+++ b/ThingyApp/Db/nodes.template
@@ -1,8 +1,7 @@
-# Database for Nordic thingy:52
+# Database for Nordic thingy:52 mesh network nodes
 
-# Subscribe to notifications
 record(aSub, "$(Sys)$(Dev)LEDWriter") {
-	field(DESC,	"LED writer for thingy node $(NodeID)")
+	field(DESC,	"LED writer for thingy node")
 	field(SNAM,	"toggle_led")
 	field(INPA,	$(NodeID))
 	field(INPB,	"$(Sys)$(Dev)LED.VAL")
@@ -13,4 +12,132 @@ record(aSub, "$(Sys)$(Dev)LEDWriter") {
 
 record(ai, "$(Sys)$(Dev)LED") {
 	field(VAL,	"0")
+}
+
+record(aSub, "$(Sys)$(Dev)BatteryNotifier") {
+	field(DESC,	"Battery listener for thingy node")
+	field(SCAN,	"Passive")
+	field(INAM,	"subscribeUUID")
+	field(INPA,	$(NodeID))
+	field(INPB,	"0")
+	field(FTA,	"SHORT")
+	field(FTB,	"SHORT")
+	field(OUTA,	"$(Sys)$(Dev)Battery.VAL")
+	field(FTVA,	"FLOAT")
+	field(FLNK,	"$(Sys)$(Dev)Battery")
+}
+
+record(ai, "$(Sys)$(Dev)Battery") {
+	field(DESC,	"Battery level for thingy node")
+	field(EGU,	"%")
+	field(PREC,	"0")
+	field(HIGH,	"80")
+	field(HIHI,	"100")
+	field(LOW,	"10")
+	field(LOLO,	"5")
+	field(VAL,	"-1")
+}
+
+record(aSub, "$(Sys)$(Dev)RSSINotifier") {
+	field(DESC,	"RSSI listener for thingy:52 node")
+	field(SCAN,	"Passive")
+	field(INAM,	"subscribeUUID")
+	field(INPA,	$(NodeID))
+	field(INPB,	"1")
+	field(FTA,	"SHORT")
+	field(FTB,	"SHORT")
+	field(OUTA,	"$(Sys)$(Dev)RSSI.VAL")
+	field(FTVA,	"FLOAT")
+	field(FLNK,	"$(Sys)$(Dev)RSSI")
+}
+
+record(ai, "$(Sys)$(Dev)RSSI") {
+	field(DESC,	"RSSI for thingy node")
+	field(EGU,	"")
+	field(PREC,	"0")
+	field(VAL,	"-1")
+}
+
+record(aSub, "$(Sys)$(Dev)ButtonNotifier") {
+	field(DESC,	"Button listener for thingy node")
+	field(SCAN,	"Passive")
+	field(INAM,	"subscribeUUID")
+	field(INPA,	$(NodeID))
+	field(INPB,	"2")
+	field(FTA,	"SHORT")
+	field(FTB,	"SHORT")
+	field(OUTA,	"$(Sys)$(Dev)Button.VAL")
+	field(FTVA,	"FLOAT")
+	field(FLNK,	"$(Sys)$(Dev)Button")
+}
+
+record(ai, "$(Sys)$(Dev)Button") {
+	field(DESC,	"Button state for thingy node")
+	field(EGU,	"")
+	field(PREC,	"0")
+	field(VAL,	"-1")
+}
+
+record(aSub, "$(Sys)$(Dev)TemperatureNotifier") {
+	field(DESC,	"Temperature listener for thingy node")
+	field(SCAN,	"Passive")
+	field(INAM,	"subscribeUUID")
+	field(INPA,	$(NodeID))
+	field(INPB,	"3")
+	field(FTA,	"SHORT")
+	field(FTB,	"SHORT")
+	field(OUTA,	"$(Sys)$(Dev)Temperature.VAL")
+	field(FTVA,	"FLOAT")
+	field(FLNK,	"$(Sys)$(Dev)Temperature")
+}
+
+record(ai, "$(Sys)$(Dev)Temperature") {
+	field(DESC,	"Temperature value for thingy node")
+	field(EGU,	"C")
+	field(PREC,	"2")
+	field(HIGH,	"50")
+	field(HIHI,	"200")
+	field(LOW,	"5")
+	field(LOLO,	"0")
+	field(VAL,	"-1")
+}
+
+record(aSub, "$(Sys)$(Dev)HumidityNotifier") {
+	field(DESC,	"Humidity listener for thingy node")
+	field(SCAN,	"Passive")
+	field(INAM,	"subscribeUUID")
+	field(INPA,	$(NodeID))
+	field(INPB,	"4")
+	field(FTA,	"SHORT")
+	field(FTB,	"SHORT")
+	field(OUTA,	"$(Sys)$(Dev)Humidity.VAL")
+	field(FTVA,	"FLOAT")
+	field(FLNK,	"$(Sys)$(Dev)Humidity")
+}
+
+record(ai, "$(Sys)$(Dev)Humidity") {
+	field(DESC,	"Humidity value for thingy node")
+	field(EGU,	"%")
+	field(PREC,	"0")
+	field(VAL,	"-1")
+}
+
+record(aSub, "$(Sys)$(Dev)PressureNotifier") {
+	field(DESC,	"Pressure listener for thingy node")
+	field(SCAN,	"Passive")
+	field(INAM,	"subscribeUUID")
+	field(INPA,	$(NodeID))
+	field(INPB,	"5")
+	field(FTA,	"SHORT")
+	field(FTB,	"SHORT")
+	field(OUTA,	"$(Sys)$(Dev)Pressure.VAL")
+	field(FTVA,	"FLOAT")
+	field(FLNK,	"$(Sys)$(Dev)Pressure")
+}
+
+record(ai, "$(Sys)$(Dev)Pressure") {
+	field(DESC,	"Pressure value for thingy:52 node")
+	field(EGU,	"hPa")
+	field(PREC,	"2")
+	field(VAL,	"-1")
 }
