More descriptive name

--- a/ThingyApp/src/Makefile
+++ b/ThingyApp/src/Makefile
@@ -14,12 +14,12 @@ DBD += thingy.dbd
 thingy_DBD += base.dbd
 #thingy_DBD += asyn.dbd
 #thingy_DBD += drvAsynIPPort.dbd
-thingy_DBD += bluetooth.dbd
+thingy_DBD += thingyMesh.dbd
 
 # thingy_registerRecordDeviceDriver.cpp derives from thingy.dbd
 thingy_SRCS += thingy_registerRecordDeviceDriver.cpp
 
-thingy_SRCS += bluetooth.c
+thingy_SRCS += thingyMesh.c
 
 # Build the main IOC entry point on workstation OSs.
 thingy_SRCS_DEFAULT += bluetoothMain.cpp
