--- a/ThingyApp/Db/nodes.template
+++ b/ThingyApp/Db/nodes.template
@@ -17,7 +17,7 @@ record(ai, "$(Sys)$(Dev)LED") {
 record(aSub, "$(Sys)$(Dev)BatteryNotifier") {
 	field(DESC,	"Battery listener for thingy node")
 	field(SCAN,	"Passive")
-	field(INAM,	"subscribeUUID")
+	field(INAM,	"register_sensor")
 	field(INPA,	$(NodeID))
 	field(INPB,	"0")
 	field(FTA,	"SHORT")
@@ -41,7 +41,7 @@ record(ai, "$(Sys)$(Dev)Battery") {
 record(aSub, "$(Sys)$(Dev)RSSINotifier") {
 	field(DESC,	"RSSI listener for thingy:52 node")
 	field(SCAN,	"Passive")
-	field(INAM,	"subscribeUUID")
+	field(INAM,	"register_sensor")
 	field(INPA,	$(NodeID))
 	field(INPB,	"1")
 	field(FTA,	"SHORT")
@@ -61,7 +61,7 @@ record(ai, "$(Sys)$(Dev)RSSI") {
 record(aSub, "$(Sys)$(Dev)ButtonNotifier") {
 	field(DESC,	"Button listener for thingy node")
 	field(SCAN,	"Passive")
-	field(INAM,	"subscribeUUID")
+	field(INAM,	"register_sensor")
 	field(INPA,	$(NodeID))
 	field(INPB,	"2")
 	field(FTA,	"SHORT")
@@ -81,7 +81,7 @@ record(ai, "$(Sys)$(Dev)Button") {
 record(aSub, "$(Sys)$(Dev)TemperatureNotifier") {
 	field(DESC,	"Temperature listener for thingy node")
 	field(SCAN,	"Passive")
-	field(INAM,	"subscribeUUID")
+	field(INAM,	"register_sensor")
 	field(INPA,	$(NodeID))
 	field(INPB,	"3")
 	field(FTA,	"SHORT")
@@ -105,7 +105,7 @@ record(ai, "$(Sys)$(Dev)Temperature") {
 record(aSub, "$(Sys)$(Dev)HumidityNotifier") {
 	field(DESC,	"Humidity listener for thingy node")
 	field(SCAN,	"Passive")
-	field(INAM,	"subscribeUUID")
+	field(INAM,	"register_sensor")
 	field(INPA,	$(NodeID))
 	field(INPB,	"4")
 	field(FTA,	"SHORT")
@@ -125,7 +125,7 @@ record(ai, "$(Sys)$(Dev)Humidity") {
 record(aSub, "$(Sys)$(Dev)PressureNotifier") {
 	field(DESC,	"Pressure listener for thingy node")
 	field(SCAN,	"Passive")
-	field(INAM,	"subscribeUUID")
+	field(INAM,	"register_sensor")
 	field(INPA,	$(NodeID))
 	field(INPB,	"5")
 	field(FTA,	"SHORT")
