Add connection PV

--- a/ThingyApp/Db/bridge.template
+++ b/ThingyApp/Db/bridge.template
@@ -1,9 +1,9 @@
 record(aSub, "$(Sys)$(Dev)StatusNotifier") {
 	field(DESC,	"Status listener for thingy node")
 	field(SCAN,	"Passive")
-	field(INAM,	"register_status")
+	field(INAM,	"register_pv")
 	field(INPA,	10)
-	field(INPB,	"0")
+	field(INPB,	1)
 	field(FTA,	"SHORT")
 	field(FTB,	"SHORT")
 	field(OUTA,	"$(Sys)$(Dev)Status.VAL")
@@ -20,7 +20,7 @@ record(aSub, "$(Sys)$(Dev)BatteryNotifier") {
 	field(SCAN,	"Passive")
 	field(INAM,	"register_sensor")
 	field(INPA,	10)
-	field(INPB,	"1")
+	field(INPB,	3)
 	field(FTA,	"SHORT")
 	field(FTB,	"SHORT")
 	field(OUTA,	"$(Sys)$(Dev)Battery.VAL")
