Add LED toggle functionality through PV

--- a/ThingyApp/Db/nodes.template
+++ b/ThingyApp/Db/nodes.template
@@ -2,11 +2,14 @@
 
 record(aSub, "$(Sys)$(Dev)LEDWriter") {
 	field(DESC,	"LED writer for thingy node")
+	field(SCAN,	".2 second")
 	field(SNAM,	"toggle_led")
+	field(VAL,	0)
 	field(INPA,	$(NodeID))
 	field(INPB,	"$(Sys)$(Dev)LED.VAL")
 	field(FTA,	"SHORT")
 	field(FTB,	"SHORT")
+	field(OUTA, "$(Sys)$(Dev)LED.VAL")
 	field(FTVA,	"SHORT")
 }
 
